--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .me {
-    position:relative;
+    position: relative;
     background: #FFFFFF;
     border: 1px solid #979797;
     box-shadow: 2px 2px 2px 5px rgba(0,0,0,0.50), inset 0 1px 3px 0 rgba(0,0,0,0.50), inset 0 1px 3px 0 rgba(0,0,0,0.50);
@@ -7,24 +7,95 @@
     text-align: center;
     margin-left: 150px;
     margin-right: 150px;
-    padding-top:150px;
+    padding-top: 150px;
+	background-image: radial-gradient(50% 100%, rgba(177,182,254,0.00) 50%, #E3E5FF 100%);
+	border: 1px solid #000000;
+	box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.50);
+    border-radius: 8px;
 }
+
+@keyframes inOut{
+    0%{
+        opacity:0
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes out {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+
 .me__img {
     position: relative;
+    width:200px;
+    height:200px;
+    display:block;
+    margin:auto;
 }
+
+.me__img > img{
+    position:absolute;
+    top:0;
+    left:0;
+    width:200px;
+    height:200px;
+    opacity:0
+}
+
+.me__img > img:nth-child(1) {
+    animation: 5s out forwards;
+    opacity:1;
+}
+
+.me__img > img:nth-child(2) {
+    animation: 5s inOut forwards;
+    animation-delay: 2.5s;
+}
+
+.me__img > img:nth-child(3) {
+    animation: 5s in forwards;
+    animation-delay: 7.5s;
+}
+
+
 
 .me__title {
     font-family: 'Lobster', cursive;
-    font-size: 4vw;
+    font-size: 35px;
     color: #000000;
 }
 .me__mail{
+    width:100px;
+    height:auto;
     
 }
 
 .me p {
     font-family: Dosis;
-    font-size: 2vw;
+    font-size: 25px;
+    margin:5px;
     color: #000000;
 }
 .me--hidden {
@@ -38,34 +109,22 @@
     transition: all 1s ease-out;
 }
 
-@media (max-width:700px){
+@media (max-width:700px) {
     .me {
         margin-left: 20px;
         margin-right: 20px;
     }
-
-
-    .me__title {
-        font-size: 5vw;
-    }
-
-
     .me p {
-        font-size: 3vw;
+        font-size: 20px;
     }
 }
 
 
 @media (max-width:400px) {
-
-    .me__title {
-        font-size: 6vw;
-    }
-
-
     .me p {
-        font-size: 4vw;
+        font-size: 15px;
     }
+
 }
 
 
